# Neo-AdaptiveLearning-App

./: Hello (apple).mov  README.md  settings.gradle.kts
app/: build.gradle.kts
app/specs/gemma-inference/: spec.md
app/specs/stt-tts/: reasearch.md
app/specs/ui-planning/: glassmorphism.md  header.jsx  mic.html  questions.md  spatial-ui-lib.jsx  voice-blob.jsx
app/src/androidTest/java/com/neo/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llm_bridge.cpp
app/src/main/java/com/neo/android/: MainActivity.kt
app/src/main/java/com/neo/android/data/: AppDatabase.kt  ChatRepository.kt  MemoryRepository.kt
app/src/main/java/com/neo/android/data/dao/: ChatDao.kt  MemoryDao.kt  MessageDao.kt
app/src/main/java/com/neo/android/data/entity/: ChatEntity.kt  MemoryEntity.kt  MessageEntity.kt
app/src/main/java/com/neo/android/engine/: EmbeddingEngine.kt  LlamaCppBridge.kt  LlmEngine.kt  LlmState.kt  MemoryExtractor.kt  WordPieceTokenizer.kt
app/src/main/java/com/neo/android/model/: ModelManager.kt
app/src/main/java/com/neo/android/usage/: UsageStatsHelper.kt
app/src/main/res/drawable/: ic_asterisk.xml  ic_badge_insights.xml  ic_badge_patterns.xml  ic_badge_suggestions.xml  ic_badge_summarise.xml  ic_brain.xml  ic_chart_area.xml  ic_menu.xml  ic_send_horizontal.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/neo/android/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+24 files in other folders)
